Topo e base concluídos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,29 @@
   </head>
   
   <body>
+    
+    <div class="container">
 
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <!-- 1 - TOPO -->
+
+    <div class="topo">
+      <h1>DrivenEats</h1>
+      <h2>Sua comida em 6 minutos</h2>
+    </div>
+
+    <!-- 2 - CONTEUDO -->
+      
+    <div class="conteudo">
+      Conteudo
+    </div>
+
+    <!-- 3 - BASE -->
+
+    <div class="base">
+      <button>Selecione os 3 itens </br> para fechar o pedido</button>
+    </div>
+
+    </div>
 
     <script src="script.js"></script>
   </body>
