Aplicação das bordas verdes

--- a/index.html
+++ b/index.html
@@ -32,27 +32,31 @@
               <h2>Ratatouille</h2>
               <p>Preparado pelo menor chef do mundo</p>
               <h3>R$ 67,99</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/2. Spaghetti.jpg">
+              <h2>Spaghetti</h2>
+              <p>Aprovado por humanos e cachorros</p>
+              <h3>R$ 53,65</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/3. Café da Manhã Chinês.jpg">
+              <h2>Café da Manhã Chinês</h2>
+              <p>Não tem dia ruim que não possa ser alegrado</p>
+              <h3>R$ 42,00</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/4. Tatu Assado.jpg">
+              <h2>Tatu Assado</h2>
+              <p>Iguaria importada de Kuzcotopia</p>
+              <h3>R$ 49,81</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
           </div>
@@ -67,27 +71,31 @@
               <h2>Poção Azul</h2>
               <p>Beba e descubra</p>
               <h3>R$ 18,03</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/6. Extrato de Lhama.jpg">
+              <h2>Extrato de Lhama</h2>
+              <p>Apesar do nome, é bom</p>
+              <h3>R$ 21,00</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/7. Cerveja de Elefante.jpg">
+              <h2>Poção Azul</h2>
+              <p>Já viu elefantes cor-de-rosa?</p>
+              <h3>R$ 9,99</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/8. Chá Asiático.jpg">
+              <h2>Chá Asiático</h2>
+              <p>ATENÇÃO: Grilo da sorte não incluso</p>
+              <h3>R$ 12,00</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
             
           </div>
@@ -102,27 +110,31 @@
               <h2>Maçã Açucarada</h2>
               <p>Não recomendada para princesas</p>
               <h3>R$ 0,99</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/10. Bolo de Aniversário.jpg">
+              <h2>Bolo de aniversário</h2>
+              <p>O sabor é ótimo, a aparência...</p>
+              <h3>R$ 38,00</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/11. Coisa Cinza.jpg">
+              <h2>Coisa Cinza</h2>
+              <p>É deliciosa, pode perguntar</p>
+              <h3>R$ 25,20</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
             <div>
-              Foto
-              Nome
-              Descrição
-              Preço
+              <img src="Imagens/12. Patolé.jpg">
+              <h2>Patolé</h2>
+              <p>Ajude um pai de família</p>
+              <h3>R$ 5,99</h3>
+              <ion-icon name="checkmark-circle"></ion-icon>
             </div>
             
           </div>
@@ -137,7 +149,8 @@
       </div>
 
     </div>
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
