Correção das bordas verdes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="conteudo">
         <div>
           <h1>Primeiro, seu prato</h1>
-          <div class="produtos">
+          <div class="produtos" id="prato">
 
             <div>
               <img src="Imagens/1. Ratatouille.jpg">
@@ -64,7 +64,7 @@
 
         <div>
           <h1>Agora, sua bebida</h1>
-          <div class="produtos">
+          <div class="produtos" id="bebida">
 
             <div>
               <img src="Imagens/5. Poção Azul.jpg">
@@ -103,7 +103,7 @@
 
         <div>
           <h1>Por fim, sua sobremesa</h1>
-          <div class="produtos">
+          <div class="produtos" id="sobremesa">
 
             <div>
               <img src="Imagens/9. Maça Açucarada.jpg">
