Aplicacao dos botoes funcionais de selecao

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div class="conteudo">
         <div>
           <h1>Primeiro, seu prato</h1>
-          <div class="produtos" id="prato">
+          <div class="produtos prato">
 
-            <div>
+            <div onclick="SelecionarPrato(this)">
               <img src="Imagens/1. Ratatouille.jpg">
               <h2>Ratatouille</h2>
               <p>Preparado pelo menor chef do mundo</p>
@@ -35,7 +35,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarPrato(this)">
               <img src="Imagens/2. Spaghetti.jpg">
               <h2>Spaghetti</h2>
               <p>Aprovado por humanos e cachorros</p>
@@ -43,7 +43,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarPrato(this)">
               <img src="Imagens/3. Café da Manhã Chinês.jpg">
               <h2>Café da Manhã Chinês</h2>
               <p>Não tem dia ruim que não possa ser alegrado</p>
@@ -51,7 +51,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarPrato(this)">
               <img src="Imagens/4. Tatu Assado.jpg">
               <h2>Tatu Assado</h2>
               <p>Iguaria importada de Kuzcotopia</p>
@@ -64,9 +64,9 @@
 
         <div>
           <h1>Agora, sua bebida</h1>
-          <div class="produtos" id="bebida">
+          <div class="produtos bebida">
 
-            <div>
+            <div onclick="SelecionarBebida(this)">
               <img src="Imagens/5. Poção Azul.jpg">
               <h2>Poção Azul</h2>
               <p>Beba e descubra</p>
@@ -74,7 +74,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarBebida(this)">
               <img src="Imagens/6. Extrato de Lhama.jpg">
               <h2>Extrato de Lhama</h2>
               <p>Apesar do nome, é bom</p>
@@ -82,7 +82,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarBebida(this)">
               <img src="Imagens/7. Cerveja de Elefante.jpg">
               <h2>Poção Azul</h2>
               <p>Já viu elefantes cor-de-rosa?</p>
@@ -90,7 +90,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarBebida(this)">
               <img src="Imagens/8. Chá Asiático.jpg">
               <h2>Chá Asiático</h2>
               <p>ATENÇÃO: Grilo da sorte não incluso</p>
@@ -103,9 +103,9 @@
 
         <div>
           <h1>Por fim, sua sobremesa</h1>
-          <div class="produtos" id="sobremesa">
+          <div class="produtos sobremesa">
 
-            <div>
+            <div onclick="SelecionarSobremesa(this)">
               <img src="Imagens/9. Maça Açucarada.jpg">
               <h2>Maçã Açucarada</h2>
               <p>Não recomendada para princesas</p>
@@ -113,7 +113,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarSobremesa(this)">
               <img src="Imagens/10. Bolo de Aniversário.jpg">
               <h2>Bolo de aniversário</h2>
               <p>O sabor é ótimo, a aparência...</p>
@@ -121,7 +121,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarSobremesa(this)">
               <img src="Imagens/11. Coisa Cinza.jpg">
               <h2>Coisa Cinza</h2>
               <p>É deliciosa, pode perguntar</p>
@@ -129,7 +129,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div>
+            <div onclick="SelecionarSobremesa(this)">
               <img src="Imagens/12. Patolé.jpg">
               <h2>Patolé</h2>
               <p>Ajude um pai de família</p>
