Conclusao dos requisitos basicos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1>Primeiro, seu prato</h1>
           <div class="produtos prato">
 
-            <div onclick="SelecionarPrato(this)">
+            <div onclick="SelecionarPrato(this, 67.99)">
               <img src="Imagens/1. Ratatouille.jpg">
               <h2>Ratatouille</h2>
               <p>Preparado pelo menor chef do mundo</p>
@@ -35,7 +35,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarPrato(this)">
+            <div onclick="SelecionarPrato(this, 53.65)">
               <img src="Imagens/2. Spaghetti.jpg">
               <h2>Spaghetti</h2>
               <p>Aprovado por humanos e cachorros</p>
@@ -43,15 +43,15 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarPrato(this)">
+            <div onclick="SelecionarPrato(this, 42.00)">
               <img src="Imagens/3. Café da Manhã Chinês.jpg">
-              <h2>Café da Manhã Chinês</h2>
-              <p>Não tem dia ruim que não possa ser alegrado</p>
+              <h2>Café da Manhã do Dragão</h2>
+              <p>Traz honra para tua vaca</p>
               <h3>R$ 42,00</h3>
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarPrato(this)">
+            <div onclick="SelecionarPrato(this, 49.81)">
               <img src="Imagens/4. Tatu Assado.jpg">
               <h2>Tatu Assado</h2>
               <p>Iguaria importada de Kuzcotopia</p>
@@ -66,7 +66,7 @@
           <h1>Agora, sua bebida</h1>
           <div class="produtos bebida">
 
-            <div onclick="SelecionarBebida(this)">
+            <div onclick="SelecionarBebida(this, 18.03)">
               <img src="Imagens/5. Poção Azul.jpg">
               <h2>Poção Azul</h2>
               <p>Beba e descubra</p>
@@ -74,7 +74,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarBebida(this)">
+            <div onclick="SelecionarBebida(this, 21.00)">
               <img src="Imagens/6. Extrato de Lhama.jpg">
               <h2>Extrato de Lhama</h2>
               <p>Apesar do nome, é bom</p>
@@ -82,7 +82,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarBebida(this)">
+            <div onclick="SelecionarBebida(this, 9.99)">
               <img src="Imagens/7. Cerveja de Elefante.jpg">
               <h2>Cerveja de Elefante</h2>
               <p>Já viu elefantes cor-de-rosa?</p>
@@ -90,9 +90,9 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarBebida(this)">
+            <div onclick="SelecionarBebida(this, 12.00)">
               <img src="Imagens/8. Chá Asiático.jpg">
-              <h2>Chá Asiático</h2>
+              <h2>Chá Oriental</h2>
               <p>ATENÇÃO: Grilo da sorte não incluso</p>
               <h3>R$ 12,00</h3>
               <ion-icon name="checkmark-circle"></ion-icon>
@@ -105,7 +105,7 @@
           <h1>Por fim, sua sobremesa</h1>
           <div class="produtos sobremesa">
 
-            <div onclick="SelecionarSobremesa(this)">
+            <div onclick="SelecionarSobremesa(this, 0.99)">
               <img src="Imagens/9. Maça Açucarada.jpg">
               <h2>Maçã Açucarada</h2>
               <p>Não recomendada para princesas</p>
@@ -113,7 +113,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarSobremesa(this)">
+            <div onclick="SelecionarSobremesa(this, 38.00)">
               <img src="Imagens/10. Bolo de Aniversário.jpg">
               <h2>Bolo de aniversário</h2>
               <p>O sabor é ótimo, a aparência...</p>
@@ -121,7 +121,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarSobremesa(this)">
+            <div onclick="SelecionarSobremesa(this, 25.20)">
               <img src="Imagens/11. Coisa Cinza.jpg">
               <h2>Coisa Cinza</h2>
               <p>É deliciosa, pode perguntar</p>
@@ -129,7 +129,7 @@
               <ion-icon name="checkmark-circle"></ion-icon>
             </div>
 
-            <div onclick="SelecionarSobremesa(this)">
+            <div onclick="SelecionarSobremesa(this, 5.99)">
               <img src="Imagens/12. Patolé.jpg">
               <h2>Patolé</h2>
               <p>Ajude um pai de família</p>
